Clear mbuf's csum_flags in ip6flow_fastforward(). Fixes PR#47849.